# futu_trd

./: .gitignore  CMakeLists.txt  README.md  backtest.cp313-win_amd64.pyd  backtest.cpp  backtest.pyd  build_and_run.bat  main.py  subscribe.py
scripts/: build_and_run.bat
src/python/: backtest.cp313-win_amd64.pyd
